struct-impl-tests/generated_tests/function/compile_fail/missing_reason.stderr
error: you need to specify a reason why this precondition holds
 --> $DIR/missing_reason.rs:8:18
  |
8 |     #[assert_pre(condition("must be bar"))]
  |                  ^^^^^^^^^^^^^^^^^^^^^^^^
  |
help: add `, reason = "why does this hold?"`
 --> $DIR/missing_reason.rs:8:41
  |
8 |     #[assert_pre(condition("must be bar"))]
  |                                         ^
